fixed background clipping

--- a/src/global-variables.scss
+++ b/src/global-variables.scss
@@ -26,7 +26,7 @@ $textFont: 'Ubuntu';
     }
 }
 @mixin four-hundred {
-    @media all and (max-width: 400px) {
+    @media all and (max-width: 00px) {
         @content;
     }
 }
